[gd_scene load_steps=7 format=3 uid="uid://wuqxfpxeqv0c"]

[ext_resource type="Script" path="res://Scripts/win_screen.gd" id="1_pja7c"]
[ext_resource type="FontFile" uid="uid://cc6oei8kggppy" path="res://Assets/JuliusSansOne-Regular.ttf" id="2_pg3mm"]
[ext_resource type="Texture2D" uid="uid://cphwld7amg7ru" path="res://Assets/Exit button.png" id="3_kij8u"]
[ext_resource type="AudioStream" uid="uid://bi544hpbifvlg" path="res://Assets/Level_win.ogg" id="4_8g1aq"]
[ext_resource type="Texture2D" uid="uid://cvyv3vis5ek1q" path="res://Assets/Next level button.png" id="5_hmc00"]

[sub_resource type="LabelSettings" id="LabelSettings_be3d6"]
font = ExtResource("2_pg3mm")
font_size = 39
font_color = Color(0.176419, 0.176419, 0.176419, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pja7c")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 312.0
offset_top = 157.0
offset_right = 840.0
offset_bottom = 484.0
color = Color(1, 1, 1, 0.6)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 418.0
offset_top = 192.0
offset_right = 734.0
offset_bottom = 235.0
text = "Level complete!"
label_settings = SubResource("LabelSettings_be3d6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 416.0
offset_right = 1704.0
offset_bottom = 832.0
scale = Vector2(0.095, 0.095)
icon = ExtResource("3_kij8u")
flat = true

[node name="Fade_timer" type="Timer" parent="."]

[node name="Success_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8g1aq")
volume_db = -15.0

[node name="Next_level_button" type="Button" parent="."]
layout_mode = 0
offset_left = 476.3
offset_top = 366.0
offset_right = 2576.3
offset_bottom = 782.0
scale = Vector2(0.095, 0.095)
icon = ExtResource("5_hmc00")
flat = true

[node name="Fade" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[connection signal="button_up" from="Exit" to="." method="_exit_button_pressed"]
[connection signal="mouse_entered" from="Exit" to="." method="_exit_mouse_entered"]
[connection signal="mouse_exited" from="Exit" to="." method="_exit_mouse_exited"]
[connection signal="timeout" from="Fade_timer" to="." method="_fade_timer_done"]
[connection signal="button_up" from="Next_level_button" to="." method="_next_level_pressed"]
[connection signal="mouse_entered" from="Next_level_button" to="." method="_next_level_mouse_entered"]
[connection signal="mouse_exited" from="Next_level_button" to="." method="_next_level_mouse_exited"]
